--- a/RISC-V_CPU_Emulator/InstructionViewer.ja-JP.resx
+++ b/RISC-V_CPU_Emulator/InstructionViewer.ja-JP.resx
@@ -117,46 +117,42 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="A" xml:space="preserve">
-    <value>----Opcode---- -aq/rl- --------rs2-------  -------rs1-------   -Opcode-    ------rd--------    -------Opcode--------</value>
+  <data name="StepExecuteButton.Text" xml:space="preserve">
+    <value>ス テ ッ プ 実 行</value>
   </data>
-  <data name="B" xml:space="preserve">
-    <value>------Immediate------   -------rs2--------   -------rs1-------   -Opcide-   ---Immediate---    -------Opcode--------</value>
+  <data name="ArgumentsGroupBox.Text" xml:space="preserve">
+    <value>値</value>
   </data>
-  <data name="CSR" xml:space="preserve">
-    <value>--------------------CSR------------------    -------rs1-------   -Opcide-    ------rd--------    -------Opcode--------</value>
+  <data name="InstructionRegisterGroupBox.Text" xml:space="preserve">
+    <value>命令レジスタ</value>
   </data>
-  <data name="FENCE" xml:space="preserve">
-    <value>-----------------------------------------------------OpCode-------------------------------------------------------------</value>
+  <data name="ProgramCounterGroupBox.Text" xml:space="preserve">
+    <value>プログラムカウンタ</value>
   </data>
-  <data name="FMV" xml:space="preserve">
-    <value>------------------Opcode-----------------  -------rs1-------   -Opcode-    ------rd--------    -------Opcode--------</value>
+  <data name="CurrentModeGroupBox.Text" xml:space="preserve">
+    <value>実行モード</value>
   </data>
-  <data name="I" xml:space="preserve">
-    <value>----------------Immediate---------------    -------rs1-------   -Opcide-    ------rd--------    -------Opcode--------</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="CurrentModeLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>199, 36</value>
   </data>
-  <data name="J" xml:space="preserve">
-    <value>-------------------------------Immediate-------------------------------    ------rd--------    -------Opcode--------</value>
+  <data name="CurrentModeLabel.Text" xml:space="preserve">
+    <value>マ シ ン モ ー ド</value>
   </data>
-  <data name="NONE" xml:space="preserve">
-    <value>-----------------------------------------------------OpCode-------------------------------------------------------------</value>
+  <data name="FloatPointRegistersGroupBox.Text" xml:space="preserve">
+    <value>浮動小数点レジスタ</value>
   </data>
-  <data name="R" xml:space="preserve">
-    <value>--------Opcode-------  -------rs2--------    -------rs1-------  -Opcide-    ------rd--------    -------Opcode--------</value>
+  <data name="IntegerRegistersGroupBox.Text" xml:space="preserve">
+    <value>整数レジスタ</value>
   </data>
-  <data name="R4" xml:space="preserve">
-    <value>-------rs3------- -Op- --------rs2-------    -------rs1-------   -Opcode-    ------rd--------    -------Opcode--------</value>
+  <data name="statusLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>184, 28</value>
   </data>
-  <data name="RF" xml:space="preserve">
-    <value>--------Opcode-------  -------rs2--------  -------rs1--------  ---rm---    ------rd--------    -------Opcode--------</value>
+  <data name="statusLabel.Text" xml:space="preserve">
+    <value>ステータス : 実行中</value>
   </data>
-  <data name="S" xml:space="preserve">
-    <value>------Immediate------   -------rs2--------   -------rs1-------   -Opcide-   ---Immediate---    -------Opcode--------</value>
-  </data>
-  <data name="SHIFT" xml:space="preserve">
-    <value>------Opcode---------  ------shamt------    -------rs1-------   -Opcide-    ------rd--------    -------Opcode--------</value>
-  </data>
-  <data name="U" xml:space="preserve">
-    <value>-------------------------------Immediate-------------------------------    ------rd--------    -------Opcode--------</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
 </root>
