--- a/RISC-V_CPU_Emulator/ControlStatusRegistersControl.resx
+++ b/RISC-V_CPU_Emulator/ControlStatusRegistersControl.resx
@@ -117,36 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="StepExecuteButton.Text" xml:space="preserve">
-    <value>ス テ ッ プ 実 行</value>
-  </data>
-  <data name="ArgumentsGroupBox.Text" xml:space="preserve">
-    <value>値</value>
-  </data>
-  <data name="InstructionRegisterGroupBox.Text" xml:space="preserve">
-    <value>命令レジスタ</value>
-  </data>
-  <data name="ProgramCounterGroupBox.Text" xml:space="preserve">
-    <value>プログラムカウンタ</value>
-  </data>
-  <data name="CurrentModeGroupBox.Text" xml:space="preserve">
-    <value>実行モード</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CSRDataGrid.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom, Left, Right</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="CurrentModeLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>199, 36</value>
+  <data name="CSRDataGrid.Location" type="System.Drawing.Point, System.Drawing">
+    <value>6, 6</value>
   </data>
-  <data name="CurrentModeLabel.Text" xml:space="preserve">
-    <value>マ シ ン モ ー ド</value>
+  <data name="CSRDataGrid.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 4, 3, 4</value>
   </data>
-  <data name="statusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 28</value>
+  <data name="CSRDataGrid.Size" type="System.Drawing.Size, System.Drawing">
+    <value>491, 590</value>
   </data>
-  <data name="statusLabel.Text" xml:space="preserve">
-    <value>ステータス : 実行中</value>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CSRDataGrid.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="&gt;&gt;CSRDataGrid.Name" xml:space="preserve">
+    <value>CSRDataGrid</value>
+  </data>
+  <data name="&gt;&gt;CSRDataGrid.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DataGridView, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;CSRDataGrid.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;CSRDataGrid.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>7, 15</value>
+  </data>
+  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Yu Gothic UI, 9pt</value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 4, 3, 4</value>
+  </data>
+  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
+    <value>500, 600</value>
+  </data>
+  <data name="&gt;&gt;$this.Name" xml:space="preserve">
+    <value>ControlStatusRegistersControl</value>
+  </data>
+  <data name="&gt;&gt;$this.Type" xml:space="preserve">
+    <value>System.Windows.Forms.UserControl, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
