--- a/RISC-V_CPU_Emulator/FloatPointRegistersControl.ja-JP.resx
+++ b/RISC-V_CPU_Emulator/FloatPointRegistersControl.ja-JP.resx
@@ -117,36 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="StepExecuteButton.Text" xml:space="preserve">
-    <value>ス テ ッ プ 実 行</value>
-  </data>
-  <data name="ArgumentsGroupBox.Text" xml:space="preserve">
-    <value>値</value>
-  </data>
-  <data name="InstructionRegisterGroupBox.Text" xml:space="preserve">
-    <value>命令レジスタ</value>
-  </data>
-  <data name="ProgramCounterGroupBox.Text" xml:space="preserve">
-    <value>プログラムカウンタ</value>
-  </data>
-  <data name="CurrentModeGroupBox.Text" xml:space="preserve">
-    <value>実行モード</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="CurrentModeLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>199, 36</value>
-  </data>
-  <data name="CurrentModeLabel.Text" xml:space="preserve">
-    <value>マ シ ン モ ー ド</value>
-  </data>
-  <data name="statusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 28</value>
-  </data>
-  <data name="statusLabel.Text" xml:space="preserve">
-    <value>ステータス : 実行中</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="FloatPointRegistersGroupBox.Text" xml:space="preserve">
+    <value>浮動小数点レジスタ</value>
   </data>
 </root>
