--- a/RISC-V_CPU_Emulator/InstructionViewer.resx
+++ b/RISC-V_CPU_Emulator/InstructionViewer.resx
@@ -151,7 +151,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;DumpViewTextBox.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="BinaryInstructionDigitLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -532,7 +532,7 @@
     <value>570, 63</value>
   </data>
   <data name="ArgumentsGroupBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>310, 285</value>
+    <value>310, 279</value>
   </data>
   <data name="ArgumentsGroupBox.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -652,7 +652,7 @@
     <value>メイリオ, 9pt</value>
   </data>
   <data name="ProgramCounterGroupBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>900, 163</value>
+    <value>900, 153</value>
   </data>
   <data name="ProgramCounterGroupBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>228, 79</value>
@@ -688,7 +688,7 @@
     <value>NoControl</value>
   </data>
   <data name="CurrentModeLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 27</value>
+    <value>16, 21</value>
   </data>
   <data name="CurrentModeLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>174, 36</value>
@@ -711,14 +711,50 @@
   <data name="&gt;&gt;CurrentModeLabel.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="statusLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
+  </data>
+  <data name="statusLabel.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="statusLabel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>メイリオ, 14.25pt</value>
+  </data>
+  <data name="statusLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="statusLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>17, 58</value>
+  </data>
+  <data name="statusLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>168, 28</value>
+  </data>
+  <data name="statusLabel.TabIndex" type="System.Int32, mscorlib">
+    <value>22</value>
+  </data>
+  <data name="statusLabel.Text" xml:space="preserve">
+    <value>Status : Running</value>
+  </data>
+  <data name="&gt;&gt;statusLabel.Name" xml:space="preserve">
+    <value>statusLabel</value>
+  </data>
+  <data name="&gt;&gt;statusLabel.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;statusLabel.Parent" xml:space="preserve">
+    <value>CurrentModeGroupBox</value>
+  </data>
+  <data name="&gt;&gt;statusLabel.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <data name="CurrentModeGroupBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>メイリオ, 9pt</value>
   </data>
   <data name="CurrentModeGroupBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>900, 269</value>
+    <value>900, 243</value>
   </data>
   <data name="CurrentModeGroupBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>228, 79</value>
+    <value>228, 99</value>
   </data>
   <data name="CurrentModeGroupBox.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -737,42 +773,6 @@
   </data>
   <data name="&gt;&gt;CurrentModeGroupBox.ZOrder" xml:space="preserve">
     <value>3</value>
-  </data>
-  <data name="statusLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Right</value>
-  </data>
-  <data name="statusLabel.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="statusLabel.Font" type="System.Drawing.Font, System.Drawing">
-    <value>メイリオ, 14.25pt</value>
-  </data>
-  <data name="statusLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="statusLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>561, 383</value>
-  </data>
-  <data name="statusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>168, 28</value>
-  </data>
-  <data name="statusLabel.TabIndex" type="System.Int32, mscorlib">
-    <value>22</value>
-  </data>
-  <data name="statusLabel.Text" xml:space="preserve">
-    <value>Status : Running</value>
-  </data>
-  <data name="&gt;&gt;statusLabel.Name" xml:space="preserve">
-    <value>statusLabel</value>
-  </data>
-  <data name="&gt;&gt;statusLabel.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;statusLabel.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;statusLabel.ZOrder" xml:space="preserve">
-    <value>1</value>
   </data>
   <data name="StepExecuteButton.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -963,85 +963,85 @@
   <data name="&gt;&gt;BinaryInstructionLabel_13_15.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="label4.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+  <data name="BinaryInstructionLabel_12_8.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
-  <data name="label4.AutoSize" type="System.Boolean, mscorlib">
+  <data name="BinaryInstructionLabel_12_8.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="label4.Font" type="System.Drawing.Font, System.Drawing">
+  <data name="BinaryInstructionLabel_12_8.Font" type="System.Drawing.Font, System.Drawing">
     <value>Yu Gothic UI, 21.75pt</value>
   </data>
-  <data name="label4.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="BinaryInstructionLabel_12_8.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="BinaryInstructionLabel_12_8.Location" type="System.Drawing.Point, System.Drawing">
     <value>378, 0</value>
   </data>
-  <data name="label4.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+  <data name="BinaryInstructionLabel_12_8.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
-  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="BinaryInstructionLabel_12_8.Size" type="System.Drawing.Size, System.Drawing">
     <value>97, 40</value>
   </data>
-  <data name="label4.TabIndex" type="System.Int32, mscorlib">
+  <data name="BinaryInstructionLabel_12_8.TabIndex" type="System.Int32, mscorlib">
     <value>23</value>
   </data>
-  <data name="label4.Text" xml:space="preserve">
+  <data name="BinaryInstructionLabel_12_8.Text" xml:space="preserve">
     <value>00000</value>
   </data>
-  <data name="label4.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+  <data name="BinaryInstructionLabel_12_8.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleCenter</value>
   </data>
-  <data name="&gt;&gt;label4.Name" xml:space="preserve">
-    <value>label4</value>
+  <data name="&gt;&gt;BinaryInstructionLabel_12_8.Name" xml:space="preserve">
+    <value>BinaryInstructionLabel_12_8</value>
   </data>
-  <data name="&gt;&gt;label4.Type" xml:space="preserve">
+  <data name="&gt;&gt;BinaryInstructionLabel_12_8.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label4.Parent" xml:space="preserve">
+  <data name="&gt;&gt;BinaryInstructionLabel_12_8.Parent" xml:space="preserve">
     <value>BinaryInstructionPanel</value>
   </data>
-  <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;BinaryInstructionLabel_12_8.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <data name="label5.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+  <data name="BinaryInstructionLabel_1_7.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
-  <data name="label5.AutoSize" type="System.Boolean, mscorlib">
+  <data name="BinaryInstructionLabel_1_7.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="label5.Font" type="System.Drawing.Font, System.Drawing">
+  <data name="BinaryInstructionLabel_1_7.Font" type="System.Drawing.Font, System.Drawing">
     <value>Yu Gothic UI, 21.75pt</value>
   </data>
-  <data name="label5.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="BinaryInstructionLabel_1_7.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="BinaryInstructionLabel_1_7.Location" type="System.Drawing.Point, System.Drawing">
     <value>472, 0</value>
   </data>
-  <data name="label5.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+  <data name="BinaryInstructionLabel_1_7.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
-  <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="BinaryInstructionLabel_1_7.Size" type="System.Drawing.Size, System.Drawing">
     <value>129, 40</value>
   </data>
-  <data name="label5.TabIndex" type="System.Int32, mscorlib">
+  <data name="BinaryInstructionLabel_1_7.TabIndex" type="System.Int32, mscorlib">
     <value>23</value>
   </data>
-  <data name="label5.Text" xml:space="preserve">
+  <data name="BinaryInstructionLabel_1_7.Text" xml:space="preserve">
     <value>0000000</value>
   </data>
-  <data name="&gt;&gt;label5.Name" xml:space="preserve">
-    <value>label5</value>
+  <data name="&gt;&gt;BinaryInstructionLabel_1_7.Name" xml:space="preserve">
+    <value>BinaryInstructionLabel_1_7</value>
   </data>
-  <data name="&gt;&gt;label5.Type" xml:space="preserve">
+  <data name="&gt;&gt;BinaryInstructionLabel_1_7.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label5.Parent" xml:space="preserve">
+  <data name="&gt;&gt;BinaryInstructionLabel_1_7.Parent" xml:space="preserve">
     <value>BinaryInstructionPanel</value>
   </data>
-  <data name="&gt;&gt;label5.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;BinaryInstructionLabel_1_7.ZOrder" xml:space="preserve">
     <value>5</value>
   </data>
   <data name="BinaryInstructionPanel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
@@ -1067,6 +1067,120 @@
   </data>
   <data name="&gt;&gt;BinaryInstructionPanel.ZOrder" xml:space="preserve">
     <value>7</value>
+  </data>
+  <data name="DisplayCSRegisterCheckBox.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="DisplayCSRegisterCheckBox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="DisplayCSRegisterCheckBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>4, 48</value>
+  </data>
+  <data name="DisplayCSRegisterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>344, 22</value>
+  </data>
+  <data name="DisplayCSRegisterCheckBox.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="DisplayCSRegisterCheckBox.Text" xml:space="preserve">
+    <value>Display Control-Status Register in a separate windows</value>
+  </data>
+  <data name="&gt;&gt;DisplayCSRegisterCheckBox.Name" xml:space="preserve">
+    <value>DisplayCSRegisterCheckBox</value>
+  </data>
+  <data name="&gt;&gt;DisplayCSRegisterCheckBox.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;DisplayCSRegisterCheckBox.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;DisplayCSRegisterCheckBox.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="DisplayFPRegisterCheckBox.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="DisplayFPRegisterCheckBox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="DisplayFPRegisterCheckBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>4, 25</value>
+  </data>
+  <data name="DisplayFPRegisterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>322, 22</value>
+  </data>
+  <data name="DisplayFPRegisterCheckBox.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="DisplayFPRegisterCheckBox.Text" xml:space="preserve">
+    <value>Display Float-Point Register in a separate windows</value>
+  </data>
+  <data name="&gt;&gt;DisplayFPRegisterCheckBox.Name" xml:space="preserve">
+    <value>DisplayFPRegisterCheckBox</value>
+  </data>
+  <data name="&gt;&gt;DisplayFPRegisterCheckBox.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;DisplayFPRegisterCheckBox.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;DisplayFPRegisterCheckBox.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="DisplayIRegisterCheckBox.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="DisplayIRegisterCheckBox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="DisplayIRegisterCheckBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>4, 3</value>
+  </data>
+  <data name="DisplayIRegisterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>302, 22</value>
+  </data>
+  <data name="DisplayIRegisterCheckBox.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="DisplayIRegisterCheckBox.Text" xml:space="preserve">
+    <value>Display Integer Register in a separate windows</value>
+  </data>
+  <data name="&gt;&gt;DisplayIRegisterCheckBox.Name" xml:space="preserve">
+    <value>DisplayIRegisterCheckBox</value>
+  </data>
+  <data name="&gt;&gt;DisplayIRegisterCheckBox.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;DisplayIRegisterCheckBox.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;DisplayIRegisterCheckBox.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="panel1.Font" type="System.Drawing.Font, System.Drawing">
+    <value>メイリオ, 9pt</value>
+  </data>
+  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>566, 348</value>
+  </data>
+  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>360, 71</value>
+  </data>
+  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
+    <value>27</value>
+  </data>
+  <data name="&gt;&gt;panel1.Name" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;panel1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="IntegerRegistersControl.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
