--- a/RISC-V_CPU_Emulator/InstructionViewer.ja-JP.resx
+++ b/RISC-V_CPU_Emulator/InstructionViewer.ja-JP.resx
@@ -129,8 +129,15 @@
   <data name="CurrentModeGroupBox.Text" xml:space="preserve">
     <value>実行モード</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="CurrentModeLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>175, 31</value>
+  </data>
   <data name="CurrentModeLabel.Text" xml:space="preserve">
     <value>マ シ ン モ ー ド</value>
+  </data>
+  <data name="statusLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>184, 28</value>
   </data>
   <data name="statusLabel.Text" xml:space="preserve">
     <value>ステータス : 実行中</value>
@@ -138,13 +145,35 @@
   <data name="StepExecuteButton.Text" xml:space="preserve">
     <value>ス テ ッ プ 実 行</value>
   </data>
+  <data name="DisplayCSRegisterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>51, 22</value>
+  </data>
   <data name="DisplayCSRegisterCheckBox.Text" xml:space="preserve">
-    <value>コントロール・ステータスレジスタを別ウィンドウで表示する</value>
+    <value>CSR</value>
+  </data>
+  <data name="DisplayFPRegisterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>135, 22</value>
   </data>
   <data name="DisplayFPRegisterCheckBox.Text" xml:space="preserve">
-    <value>浮動小数点レジスタを別ウィンドウで表示する</value>
+    <value>浮動小数点レジスタ</value>
+  </data>
+  <data name="DisplayIRegisterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>99, 22</value>
   </data>
   <data name="DisplayIRegisterCheckBox.Text" xml:space="preserve">
-    <value>整数レジスタを別ウィンドウで表示する</value>
+    <value>整数レジスタ</value>
+  </data>
+  <data name="groupBox1.Text" xml:space="preserve">
+    <value>別ウィンドウで表示する</value>
+  </data>
+  <data name="RunPcCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>162, 22</value>
+  </data>
+  <data name="RunPcCheckBox.Text" xml:space="preserve">
+    <value>PCが下記になるまで実行</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
 </root>
